--- a/yes.html
+++ b/yes.html
@@ -12,7 +12,7 @@
 			</div>
 			<div class="gif_container">
 				<img
-					src="./img/cute-cat.gif"
+					src="https://raw.githubusercontent.com/IliazovAmin/IliazovAmin.github.io/main/cute-cat.gif"
 					alt="Cute animated illustration"
 				/>
 			</div>
